syntax = "proto3";

package kmrpb;

service Master {
    rpc RequestTask(RegisterParams) returns (Task) {}
    rpc ReportTask(ReportInfo) returns (Response) {}
}

message RegisterParams {
    string jobName = 1;
}

message ReportInfo {
    string jobName = 1;
    string phase = 2;
    int32 taskID = 3;
    int64 workerID = 4;
    enum ErrorCode {
        DOING = 0;
        ERROR = 1;
        FINISH = 2;
    }
    ErrorCode retcode = 5;
}

message Task {
    int32 retcode = 1;
    TaskInfo taskinfo = 2;
    int64 workerID = 3;
}

message TaskInfo {
    string jobName = 1;
    repeated string files = 2; // Batch task for map, shards for reduce
    string mapBucketJson = 3;
    string intermediateBucketJson = 4;
    string reduceBucketJson = 5;
    string phase = 6;
    int32 nMap = 7;
    int32 nReduce = 8;
    string readerType = 9;
    int32 taskID = 10;
    repeated int64 commitMappers = 11;
    int32 mapBatchSize = 12;
}

message Response {
    int32 retcode = 1;
}

message KV {
    bytes key = 1;
    bytes value = 2;
}
